2005-01-14  Sebastian Rahtz  <rahtz@spqr>

	* Started work in CVS on Sourceforge

	HIC DESUNT MULTA since 2004/10/01

2004-10-01  Sebastian Rahtz  <rahtz@spqr-ibm>
	* odd2relax.xsl and teiodds.xsl: bug fixes here and there to cater
	for below
	* teicommon.xsl: some un-namespaced remnants corrected
	* classSpec.odd: allow for a <content> child, to contain a
   	   starting declaration (defaults to <notAllowed/>)
        * schemaspec.odd: add attribute "start" to generate Relax NG start
	   statements (can be NMTOKENS, for multiple choices). modules
	   do not now generate a start at all.
	* figure.odd: make url and doc attributes of figure be a choice, not allowed together
	* moduleref.odd:  make url and key attributes be a choice, not
	  allowed together. also allow children (if using @url)
	* orig.odd/reg.odd: put in correct classes for <choice>
	
2004-06-01  Sebastian Rahtz  <rahtz@computing-services.oxford.ac.uk>

	Change 43901 submitted.
	* Source/ST/st.odd: dftana and dftlink not needed; done by
	"predeclare" attribute on all classes which are needed up front.

	* remove all remaining <claDecl> elements, in favour of
	predeclaration

	* juggle order of macros to make them appear in right order

	* cbcomp should be in "tei" module not "core"

2004-05-31  Sebastian Rahtz  <rahtz@spqr-dell.oucs.ox.ac.uk>

	* Tools/dtdGen.xsl: considerably simplify processing model:
	visit every module in turn, and process the elements, classes and
	macros which occur it it. Unless it has a type value of "core", in
	which case it gets special treatment. At that point, declare a
	marked section for every module, set to IGNORE. This means that
	all modules must be explicitly requested.

	* Source/PR/pr.odd (fragment): omit "prose" module entirely, as it
	does nothing

	* Source/ST/inherit.odd: kill this one. not used any more.
	
	* Source/TD/msection.odd: kill the whole concept.
	
	* Source/ST/st.odd: 
	  - entirely kill marked sections for XML/SGML omissability. embed