@@ -3,6 +3,7 @@
 <!ENTITY % TEI.header "INCLUDE">
 <!ENTITY % TEI.core "INCLUDE">
 <!ENTITY % TEI.textstructure "INCLUDE">
+<!ENTITY % TEI.dictionaries "INCLUDE">
 <!ENTITY % TEI.XML 'INCLUDE'>
 ]>
 <TEI xmlns="http://www.tei-c.org/ns/1.0">
