@@ -4,6 +4,7 @@
 <!ENTITY % TEI.core "INCLUDE">
 <!ENTITY % TEI.iso-fs "INCLUDE">
 <!ENTITY % TEI.textstructure "INCLUDE">
+<!ENTITY % TEI.iso-fs "INCLUDE">
 <!ENTITY % TEI.XML 'INCLUDE'>
 ]>
 <TEI xmlns="http://www.tei-c.org/ns/1.0">
