@@ -1,3 +1,7 @@
+2005-01-15  Sebastian Rahtz  <rahtz@spqr-ibm>
+
+	* Source/ST/teicorp2.odd: add xmlns attribute to teiCorpus
+
 2005-01-14  Sebastian Rahtz  <rahtz@spqr>
 
 	* Started work in CVS on Sourceforge
